--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@cloudinary/angular": "^2.1.1",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file-transfer": "^4.10.1",
     "@ionic-native/media": "^4.7.0",
     "@ionic-native/media-capture": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
@@ -30,11 +32,13 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
+    "cloudinary-core": "^2.5.0",
     "cordova-android": "^7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-media": "^5.0.2",
@@ -64,7 +68,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-media": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-media-capture": {}
+      "cordova-plugin-media-capture": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "browser",
