--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
     "cloudinary-core": "^2.5.0",
-    "cordova-android": "^7.1.0",
+    "cordova-android": "^7.1.1",
     "cordova-browser": "5.0.3",
-    "cordova-ios": "4.5.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
