--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@cloudinary/angular": "^2.1.1",
+    "@cloudinary/angular-5.x": "^1.0.2",
+    "@ionic-native/android-permissions": "^4.11.0",
+    "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/file": "^4.7.0",
     "@ionic-native/file-transfer": "^4.10.1",
@@ -33,14 +35,16 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
     "cloudinary-core": "^2.5.0",
-    "cordova-android": "^7.1.1",
+    "cordova-android": "7.1.1",
     "cordova-browser": "5.0.3",
     "cordova-ios": "^4.5.5",
+    "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-media": "^5.0.2",
     "cordova-plugin-media-capture": "^3.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -69,7 +73,9 @@
       "cordova-plugin-media": {},
       "cordova-plugin-file": {},
       "cordova-plugin-media-capture": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "browser",
