--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "angularfire2": "^5.0.0-rc.11",
     "cloudinary-core": "^2.5.0",
     "cordova-android": "7.1.1",
-    "cordova-browser": "5.0.3",
-    "cordova-ios": "^4.5.5",
+    "cordova-browser": "^5.0.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -48,6 +48,7 @@
     "cordova-plugin-media": "^5.0.2",
     "cordova-plugin-media-capture": "^3.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.2.0",
     "ionic-angular": "3.9.2",
@@ -70,16 +71,19 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-media": {},
+      "cordova-plugin-media": {
+        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
+      },
       "cordova-plugin-file": {},
       "cordova-plugin-media-capture": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
-      "browser",
       "android",
+      "browser",
       "ios"
     ]
   }
