--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/android-permissions": "^4.11.0",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.7.0",
-    "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file": "3.4.4",
     "@ionic-native/file-transfer": "^4.10.1",
     "@ionic-native/media": "^4.7.0",
     "@ionic-native/media-capture": "^4.7.0",
@@ -37,7 +37,7 @@
     "cloudinary-core": "^2.5.0",
     "cordova-android": "7.1.1",
     "cordova-browser": "^5.0.4",
-    "cordova-ios": "4.5.5",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
