--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@cloudinary/angular-5.x": "^1.0.2",
     "@ionic-native/android-permissions": "^4.11.0",
+    "@ionic-native/base64": "^4.15.0",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.7.0",
-    "@ionic-native/file": "3.4.4",
+    "@ionic-native/file": "^3.8.0",
     "@ionic-native/file-transfer": "^4.10.1",
     "@ionic-native/media": "^4.7.0",
     "@ionic-native/media-capture": "^4.7.0",
@@ -34,10 +35,12 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
+    "aws-amplify": "^1.1.4",
     "cloudinary-core": "^2.5.0",
+    "com-badrit-base64": "^0.2.0",
     "cordova-android": "7.1.1",
     "cordova-browser": "^5.0.4",
-    "cordova-ios": "^4.5.5",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -60,7 +63,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.9",
+    "@ionic/app-scripts": "^3.2.0",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
@@ -79,7 +82,8 @@
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "com-badrit-base64": {}
     },
     "platforms": [
       "android",
