--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@cloudinary/angular-5.x": "^1.0.2",
     "@ionic-native/android-permissions": "^4.11.0",
-    "@ionic-native/base64": "^4.15.0",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/file": "^3.8.0",
@@ -35,17 +34,11 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
-    "aws-amplify": "^1.1.4",
-    "cloudinary-core": "^2.5.0",
-    "com-badrit-base64": "^0.2.0",
-    "cordova-android": "7.1.1",
-    "cordova-browser": "^5.0.4",
-    "cordova-ios": "4.5.5",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-hockeyapp": "^5.1.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-media": "^5.0.2",
@@ -55,6 +48,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.2.0",
     "ionic-angular": "3.9.2",
+    "ionic-hockeyapp": "^1.0.0",
     "ionicons": "3.0.0",
     "promise-polyfill": "^8.0.0",
     "rxjs": "^6.2.1",
@@ -79,16 +73,11 @@
       },
       "cordova-plugin-file": {},
       "cordova-plugin-media-capture": {},
-      "cordova-plugin-file-transfer": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-statusbar": {},
-      "com-badrit-base64": {}
+      "cordova-plugin-hockeyapp": {}
     },
-    "platforms": [
-      "android",
-      "browser",
-      "ios"
-    ]
+    "platforms": []
   }
 }
