--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -78,6 +79,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-hockeyapp": {}
     },
-    "platforms": []
+    "platforms": [
+      "ios"
+    ]
   }
 }
