--- a/package.json
+++ b/package.json
@@ -36,13 +36,11 @@
     "angularfire2": "^5.0.0-rc.11",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-hockeyapp": "^5.1.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-media": "^5.0.2",
     "cordova-plugin-media-capture": "^3.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -65,20 +63,18 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
+      "cordova-plugin-file": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-media": {
-        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-file": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-media": {},
       "cordova-plugin-media-capture": {},
-      "cordova-plugin-android-permissions": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-hockeyapp": {}
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "ios",
