--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
       "cordova-plugin-statusbar": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
